<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="mortgage_amount">Mortgage Total Amount</string>
    <string name="down_payment_amount">Down Payment Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="years_number">15</string>
    <string name="years">Years</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="digits">0123456789</string>
</resources>
