<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context="com.harrysilman.mortgagecalculator.MainActivity">

    <EditText
        android:id="@+id/mortgageAmountEditText"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:digits="@string/digits"
        android:ems="10"
        android:includeFontPadding="false"
        android:inputType="number"
        android:maxLength="12"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/mortgageAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical|center_horizontal|fill_horizontal"
        android:layout_row="0"
        android:background="@drawable/edit_text_background"
        android:elevation="@dimen/elevation"
        android:gravity="center_vertical|fill_horizontal"
        android:padding="@dimen/textview_padding"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText"
        tools:text="@string/mortgage_amount" />

    <EditText
        android:id="@+id/downPaymentEditText"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:digits="@string/digits"
        android:ems="10"
        android:inputType="number"
        android:maxLength="12"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/downPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:background="@drawable/edit_text_background"
        android:elevation="@dimen/elevation"
        android:gravity="center_vertical"
        android:padding="@dimen/textview_padding"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText"
        tools:text="@string/down_payment_amount" />

    <EditText
        android:id="@+id/interestRateEditText"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:digits="@string/digits"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/interestRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:background="@drawable/edit_text_background"
        android:elevation="@dimen/elevation"
        android:gravity="center_vertical"
        android:padding="@dimen/textview_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText"
        tools:text="@string/interest_rate" />

    <TextView
        android:id="@+id/yearsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/textview_padding"
        android:text="@string/years_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/yearsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|end"
        android:layout_row="3"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/textview_padding"
        android:text="@string/years"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <SeekBar
        android:id="@+id/yearsSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:layout_gravity="fill_horizontal"
        android:max="29"
        android:progress="15" />

    <TextView
        android:id="@+id/monthlyPaymentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="4"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/textview_padding"
        android:text="@string/monthly_payment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/monthlyPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:background="@drawable/result_background"
        android:elevation="@dimen/elevation"
        android:inputType="number"
        android:padding="@dimen/textview_padding"
        android:text="Medium Text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/mediumText" />

</GridLayout>
